# home-temp-collector

./: Dockerfile  README.md  compose.prd.yml  compose.yml
.github/workflows/: build.yaml  test.yaml
app/: main.py  pyproject.toml
app/modules/: api_module.py  extract_data_module.py  log_module.py  postgres_module.py
app/settings/: config.py
