[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
mypy = "^1.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",    # undocumented
    "D203",  # one blank line before class
    "D213",  # multi-line summary second line
    "TD001", # invalid todo tag
    "TD002", # missing todo author
    "TD003", # missing todo link
    "PD011", # pandas use of dot values
]

[tool.ruff.lint.pylint]
max-args = 6