[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.4"
pydantic = "^2.11.7"
pydantic-settings = "^2.9.1"
types-requests = "^2.32.4.20250611"
psycopg = {extras = ["binary"], version = "^3.2.9"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
mypy = "^1.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "BLE001", # blind except
    "COM812", # missing trailing comma
    "COM819", # prohibited-trailing-comma
    "D1",     # undocumented
    "D203",   # one blank line before class
    "D213",   # multi-line summary second line
    "D206",   # indent-with-spaces
    "D300",   # triple-single-quotes
    "D400",   # missing trailing period
    "D415",   # missing terminal punctuation
    "E111",   # indentation-with-invalid-multiple
    "E114",   # indentation-with-invalid-multiple-comment
    "E117",   # over-indented
    "FA102",
    "ISC001", # single-line-implicit-string-concatenation
    "ISC002", # multi-line-implicit-string-concatenation
    "PD011",   # pandas use of dot values
    "Q000",   # bad-quotes-inline-string
    "Q001",   # bad-quotes-multiline-string
    "Q002",   # bad-quotes-docstring
    "Q003",   # avoidable-escaped-quote
    "TD001",  # invalid todo tag
    "TD002",  # missing todo author
    "TD003",  # missing todo link
    "W191",   # tab-indentation
]

[tool.ruff.lint.pylint]
max-args = 6